Generate 404 page for export

--- a/src/template.html
+++ b/src/template.html
@@ -35,4 +35,7 @@
 	<div id="sapper">%sapper.html%</div>
 </body>
 
+<!-- Hack to generate 404 page during export -->
+<a href="/404" aria-hidden="true" style="display: none"></a>
+
 </html>
