fix: add leading slash to app.html paths

--- a/src/app.html
+++ b/src/app.html
@@ -21,9 +21,9 @@
 		} catch (error) {}
 
 	</script>
-	<link rel="manifest" href="site.webmanifest" crossorigin="use-credentials">
-	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+	<link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
+	<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png">
 	%svelte.head%
 </head>
 
