--- a/workspace/website/src/app.html
+++ b/workspace/website/src/app.html
@@ -12,9 +12,9 @@
 			data-cf-beacon='{"token": "402cd91137d14890a1117569bda0ee41"}'
 		></script>
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png" />
+		<link rel="icon" href="/favicon.ico" sizes="32x32" />
+		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+		<link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
 		<link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials" />
 
 		%sveltekit.head%
