--- a/workspace/website/src/app.html
+++ b/workspace/website/src/app.html
@@ -4,13 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta name="theme-color" content="#181818" />
-
-		<script
-			defer
-			src="https://static.cloudflareinsights.com/beacon.min.js"
-			data-cf-beacon='{"token": "402cd91137d14890a1117569bda0ee41"}'
-		></script>
+		<meta name="theme-color" content="#0e0e0e" />
 
 		<link rel="icon" href="/favicon.ico" sizes="32x32" />
 		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
