trim trailing slashes

--- a/workspace/apex/src/app.html
+++ b/workspace/apex/src/app.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta name="theme-color" content="#0c0c0e" />
 
 		<link rel="icon" href="/favicon.ico" sizes="32x32" />
 		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-		<link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
 		<link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials" />
+		<link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
+		<meta name="theme-color" content="#0c0c0e" />
 
 		%sveltekit.head%
 	</head>
